--- a/PartI/CMakeLists.txt
+++ b/PartI/CMakeLists.txt
@@ -5,8 +5,10 @@ set(MODULE_NAME PartI)
 # 添加头文件路径
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Chapter1)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Chapter2)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Chapter3)
 
 # 添加子目录
 add_subdirectory(Chapter1)
 add_subdirectory(Chapter2)
+add_subdirectory(Chapter3)
 
