--- a/PartII/CMakeLists.txt
+++ b/PartII/CMakeLists.txt
@@ -4,7 +4,9 @@ set(MODULE_NAME PartI)
 
 # 添加头文件路径
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Chapter9)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Chapter10)
 
 # 添加子目录
 add_subdirectory(Chapter9)
+add_subdirectory(Chapter10)
 
