--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ project(cpp-primer)
 set(CPP_PRIMER_VERSION_MAJOR 1)
 set(CPP_PRIMER_VERSION_MINOR 0)
 
+set(CONCURRENT_PRIMER_VERSION_MAJOR 1)
+set(CONCURRENT_PRIMER_VERSION_MINOR 1)
+
 # 设置需要链接的系统库
 # set(REQ_LIBS ${REQ_LIBS} "m")
 # set(CMAKE_REQUIRED_LIBRARIES ${REQ_LIBS})
