--- a/config.h.in
+++ b/config.h.in
@@ -3,4 +3,6 @@
 #define CPP_PRIMER_VERSION_MAJOR @CPP_PRIMER_VERSION_MAJOR@
 #define CPP_VERSION_MINOR @CPP_PRIMER_VERSION_MINOR@
 
+#define CONCURRENT_PRIMER_VERSION_MAJOR @CONCURRENT_PRIMER_VERSION_MAJOR@
+#define CONCURRENT_PRIMER_VERSION_MINOR @CONCURRENT_PRIMER_VERSION_MINOR@
 #cmakedefine BUILD_DEBUG_TYPE
